# nginx-gui

./: .gitignore  LICENSE  README.md  package.json  tauri-config-comparison.md  tauri-config-guide.md  vite.config.ts
src/: App.vue
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  opener.json  shell.json
src-tauri/resources/nginx-1.24.0/conf/: nginx.conf
src-tauri/src/: error.rs  install.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/services/: config.rs  mod.rs  nginx.rs  project.rs  settings.rs  version.rs
src-tauri/src/templates/: custom.conf  main.conf  site.conf
src-tauri/src/types/: mod.rs  nginx.rs  project.rs
src-tauri/src/utils/: fs.rs  mod.rs
src/assets/: main.css
src/components/: StatusIndicator.vue
src/components/Common/: Card.vue  Table.vue
src/components/Dialogs/: ConfirmDialog.vue  SettingsDialog.vue
src/components/Form/: Button.vue  Input.vue  Select.vue
src/components/Layout/: AppLayout.vue  AppMain.vue  AppSidebar.vue  Header.vue  MainLayout.vue  Sidebar.vue
src/components/Nginx/: ConfigActions.vue  ConfigDialogs.vue  ConfigEditor.vue  ConfigImportExport.vue  ConfigManager.vue  ConfigTable.vue  ConfigTemplate.vue  LogViewer.vue  MetricsChart.vue  ProjectConfig.vue  ServiceStatus.vue  StatusIndicator.vue  VersionManager.vue
src/components/Utils/: ErrorAlert.vue  ErrorBoundary.vue  LoadingSpinner.vue  (+1 more)
src/router/: index.ts
src/stores/: nginx copy.ts  nginx.ts
src/types/: nginx.ts
src/views/: Configs.vue  Dashboard.vue  Logs.vue  Settings.vue
(+1 files in other folders)
