[package]
name = "nginx-gui"
version = "0.1.0"
description = "A GUI for managing Nginx"
authors = ["Your Name"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nginx_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-opener = "2.2.6"
tauri-plugin-dialog = "2.2.1"
dirs = "5.0.1"
winreg = "0.50"
reqwest = { version = "0.11", features = ["json", "blocking"] }
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
updater = []

